# curp-generator

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
generator/: Cargo.toml
generator/src/: lib.rs
generator/tests/: curp.rs
libcurpgenerator/: Cargo.toml
libcurpgenerator/src/: lib.rs
packaging/deb/: copyright  shlibs
src/: curp_generator.rs  ffi.rs  generator.rs  lib.rs
