[workspace]

members = [
    "generator",
    "libcurpgenerator",
]

[profile.release]
debug = true
strip = "none"
# Link-time optimization (LTO) is a whole-program optimization technique that
# can improve runtime speed by 10-20% or more, and also reduce binary size,
# at the cost of worse compile times. It comes in several forms.
# https://nnethercote.github.io/perf-book/build-configuration.html
lto = true

